--- a/styles/cipher.css
+++ b/styles/cipher.css
@@ -13,11 +13,10 @@ body {
 body {
   background-color: #222930;
   text-align: center;
-  height: 100vh;
 }
 
 .top {
-  height: 93vh;
+  height: 100vh;
 }
 
 .p {
@@ -47,6 +46,10 @@ body {
   background-color: black;
   color:burlywood;
   height: 7vh;
+  position: fixed;
+  bottom: 0;
+  left:0;
+  right:0;
 }
 
 h5 {
